--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "description": "",
   "dependencies": {
     "axios": "^1.13.5",
+    "cashfree-pg": "^5.1.0",
     "cors": "^2.8.6",
+    "crypto": "^1.0.1",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.1",
