--- a/package.json
+++ b/package.json
@@ -1,21 +1,29 @@
 {
-  "name": "backendss",
+  "name": "nepxall-backend",
   "version": "1.0.0",
-  "main": "db.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+  "description": "Nepxall Production Backend",
+  "main": "server.js",
+
+  "engines": {
+    "node": "20.x"
   },
+
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "build": "echo Build completed",
+    "postinstall": "npm audit fix || true"
+  },
+
   "keywords": [],
-  "author": "",
+  "author": "Huligesh",
   "license": "ISC",
-  "description": "",
+
   "dependencies": {
     "axios": "^1.13.5",
     "cashfree-pg": "^5.1.0",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.6",
-    "crypto": "^1.0.1",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "firebase-admin": "^13.6.1",
@@ -26,5 +34,9 @@
     "mysql2": "^3.18.2",
     "pdfkit": "^0.17.2",
     "socket.io": "^4.8.3"
+  },
+
+  "devDependencies": {
+    "nodemon": "^3.1.0"
   }
 }
